**App update:**

- Nothing changed...

**Parsers update:**

- [ManhwaIndo] Fixes